--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Developer Students Club|Navarachna University</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
 
 
@@ -16,7 +19,7 @@
 
         <a href="#" class="logo"><img src="images/logo-full.png"></a>
         <ul>
-            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#Motto">About</a></li>
             <li><a href="#Updates">Updates</a></li>
             <li><a href="#Contact-Us">Contact</a></li>
