--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <br>
                     <p class="title">Developer Students Club </p>
                     <p class="subtitle">Navarachna University</p>
-                    <p class="desc">At DSC NUV, our aim is to learn and teach. Developers, designers and managers come together under one roof to create a community which inspires many. Join Us!</p>
+                    <p class="desc">At DSC UV, our aim is to learn and teach. Developers, designers and managers come together under one roof to create a community which inspires many. Join Us!</p>
                 </div>
                 
     
